--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.3.1",
     "sweetalert": "^2.1.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
