--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
+    "react-country-region-selector": "^4.0.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "sweetalert": "^2.1.2",
