--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-country-region-selector": "^4.0.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "sweetalert": "^2.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
