--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.23.3",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-data-list": "^1.4.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
+    "react-autosuggest": "^10.1.0",
     "react-country-region-selector": "^4.0.2",
+    "react-currency-input-field": "^3.10.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-select": "^5.10.0",
+    "react-select-currency": "^1.0.7",
     "recharts": "^2.15.1",
     "sweetalert": "^2.1.2",
     "tailwind-merge": "^2.6.0",
