--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-currency-input-field": "^3.10.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-multi-select-component": "^4.3.4",
     "react-select": "^5.10.0",
     "react-select-currency": "^1.0.7",
     "recharts": "^2.15.1",
